# page-turner

./: .coverage  AGENTS.md  README.md  db.sqlite3  pyproject.toml
books/: admin.py  models.py  test_models.py  urls.py  views.py
books/migrations/: 0001_initial.py
config/: settings.py
openspec/: database_design.md
