[project]
name = "page-turner"
version = "0.1.0"
description = "A Django book review app"
requires-python = ">=3.10"
dependencies = [
    "django",
]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings"
addopts = "--cov=. --cov-report=term-missing"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
    "pytest-django>=4.12.0",
]
